--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.10,<3.12"
 pyyaml = "^6.0"
 pyobjc = "^9.0.1"
 tiktoken = "^0.3.3"
 openai = "^0.27.2"
+pyinstaller = "^5.9.0"
 
 
 [build-system]
